--- a/Aulas/250/index.html
+++ b/Aulas/250/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv=”Content-Type” content=”text/html; charset=iso-8859-1″>
 </head>
 
-<h1>App service for Containers - ACR </h1>
+<h1>App service for Containers - Continuous Deployment com ACR </h1>
 
 <p>Esta é uma página de teste.</p>
 
